--- a/src/Loading.css
+++ b/src/Loading.css
@@ -2,7 +2,7 @@
 Loading
 */
 
-#loader-container{
+/* #loader-container{
     max-width:220px;
     position: absolute;
     top:50%;
@@ -24,27 +24,27 @@ Loading
   #loader path:nth-child(4){
     stroke-dasharray: 100%;
     stroke-dashoffset: 100%;
-    animation: strokeAnimate 2s  0.9s  ease forwards;
+    animation: strokeAnimate 2s  0.6s  ease forwards;
   }
   #loader path:nth-child(5){
     stroke-dasharray: 100%;
     stroke-dashoffset: 100%;
-    animation: strokeAnimate 2s  1.2s  ease forwards;
+    animation: strokeAnimate 2s  0.9s  ease forwards;
   }
   #loader path:nth-child(6){
     stroke-dasharray: 100%;
     stroke-dashoffset: 100%;
-    animation: strokeAnimate 2s  1.5s  ease forwards;
+    animation: strokeAnimate 2s  1.2s  ease forwards;
   }
   #loader path:nth-child(7){
     stroke-dasharray: 100%;
     stroke-dashoffset: 100%;
-    animation: strokeAnimate 2s  1.8s  ease forwards;
+    animation: strokeAnimate 2s  1.5s  ease forwards;
   }
   #loader path:nth-child(8){
     stroke-dasharray: 100%;
     stroke-dashoffset: 100%;
-    animation: strokeAnimate 2s  2.1s  ease forwards;
+    animation: strokeAnimate 2s  1.8s  ease forwards;
   }
   
   @keyframes strokeAnimate{
@@ -70,4 +70,30 @@ Loading
     #loader{
         width:100px;
     }
+  } */
+
+  #loader-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
   }
+  
+  @keyframes spin {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  }
+  
+  .loader {
+    border: 16px solid #f3f3f3;
+    border-top: 16px solid #0b044b;
+    border-radius: 50%;
+    width: 120px;
+    height: 120px;
+    animation: spin 2s linear infinite;
+  }
+  
